[package]
name = "tmp"
version = "0.1.0"
edition = "2021"
description = "Tui Music Player"

[dependencies]
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rustring_builder = "0.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true